# legend-cli

./: Cargo.toml  README.md  entitlements-test.plist  entitlements.plist
.github/workflows/: auto-release.yml  ci.yml  release.yml
bundle/: Info.plist  embedded.provisionprofile
legend-cli/: Cargo.toml  README.md
legend-cli/src/: auth.rs  config.rs  main.rs  output.rs  skill.txt
legend-cli/src/commands/: accounts.rs  dashboard.rs  keys.rs  login.rs  mcp.rs  mod.rs  plan.rs  qr.rs  sign.rs
legend-cli/tests/: integration.rs
legend-client/: Cargo.toml  README.md
legend-client/src/: accounts.rs  client.rs  error.rs  lib.rs  plan.rs  types.rs
legend-client/tests/: client_test.rs
legend-signer/: Cargo.toml  README.md
legend-signer/src/: error.rs  file_signer.rs  keychain.rs  lib.rs  secure_enclave.rs  signer.rs  turnkey.rs
legend-signer/tests/: keychain_test.rs  secure_enclave_test.rs  signer_test.rs
scripts/: bundle.sh  update-homebrew.sh
