[package]
name = "legend-cli"
version = "0.1.0"
edition = "2024"
description = "CLI for Legend Prime"
license = "MIT"

[[bin]]
name = "legend-cli"
path = "src/main.rs"

[dependencies]
legend-client = { version = "0.1.0", path = "../legend-client" }
legend-signer = { version = "0.1.0", path = "../legend-signer" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
comfy-table = "7"
anyhow = "1"
regex = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
open = "5"
tiny_http = "0.12"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
