[package]
name = "legend-signer"
version = "0.1.3"
edition = "2024"
description = "P256 signing utilities for Legend Prime"
license = "MIT"

[features]
keychain = ["security-framework", "security-framework-sys", "core-foundation"]

[dependencies]
p256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "der"] }
sha2 = "0.10"
sha3 = "0.10"
rand = "0.8"
hex = "0.4"
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = "2"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = { version = "3", features = ["OSX_10_15"], optional = true }
security-framework-sys = { version = "2", optional = true }
core-foundation = { version = "0.10", optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
